# larda

./: .gitignore  =0.3.1  CONTRIBUTING.md  LICENSE  ListCollector.py  MANIFEST.in  PathConfigHelper.py  README.md  pyproject.toml  requirements.txt  reset_uncomitted.sh  run_docs.sh  setup.py
docs/: Makefile
docs/source/: api_overview.rst  conf.py  contributors.rst  datacontainer_and_transformation.rst  guide_config.rst  how_to_use.rst  index.rst  package.rst  peakTree.rst  setup_remote.rst  spectra.rst
examples/: LIMRAD94_to_Cloudnet.py  LIMRAD94_to_Cloudnet_v2.py  Playground_Teresa.py  direct_filepaths.py  download_plot_sounding.py  example_description.py  freq_of_occurrence.py  interpolate_example_pL3.py  limrad_spec2mom.py  limrad_to_cloudnet.sh  plot_daily_remote.py  plot_overlay.py  scan_example.py  scatter_Z_mdv.py  scatter_and_dwr.py  scatter_velocity.py  simple_example_pL3.py  simple_example_pL3_willi.py  spec_example_pL3.py
http_server/: gunicorn_config.py  http_server.py  run_dev_server.sh  run_gunicorn.sh
larda.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyLARDA/: Connector.py  NcReader.py  NcWrite.py  ParameterInfo.py  RPGReader.py  SpecToMom_Util.py  SpectraProcessing.py  Transformations.py  VIS_Colormaps.py  __init__.py  __main__.py  _meta.py  helpers.py  limrad_spec2mom.py  peakTree.py  peakTree_fastbuilder.pyx  spec2mom_limrad94.py  trace_reader.py  wyoming.py
pyLARDA/template_params/: template_ceilo_chain.toml  template_mira_scans.toml  template_peakTree.toml  template_pollynet.toml  template_pollynet_v3.toml  template_rpg94_binary.toml  template_trace.toml
scripts/: ListCollector.py  PathConfigHelper.py  device_tracker_interface.py
scripts_Willi/: LIMRAD94_to_Cloudnet.py  simple_example_pL3_willi.py
template_params/: template_cloudnet.toml  template_hatpro_binary.toml  template_mira.toml  template_rpg94.toml  template_shaun.toml
