
[build-system]
requires = ["setuptools>=61.0", "cython"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages]
find = {}

[project]
name = "pyLARDA"
version = "3.3.5"
authors = [
  { name="pyLARDA-dev-team" },
]
description='Data cube for handling atmospheric observations of profiling remote sensing instruments.'
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy<=2.0", # ImportError: Numba needs NumPy 2.0 or less. Got NumPy 2.1.
  "scipy",
  "netCDF4",
  "msgpack",
  "xarray",
  "matplotlib",
  "requests",
  "toml",
  "tqdm",
  "numba",
]


[project.urls]
Homepage = "https://github.com/lacros-tropos/larda'"
#Issues = "https://github.com/pypa/sampleproject/issues"
